project/force-app/main/default/objects/Contract/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Read Only
Tích hợp từ SAP
Note: Diện tích thuê của Shopping Mall</description>
    <label>Area</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>