project/force-app/main/default/objects/Contract/fields/Area_Type__c.field-meta.xml
<CustomField>
    <fullName>Area_Type__c</fullName>
    <description>Read Only
Tích hợp từ SAP</description>
    <label>Area Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>