project/force-app/main/default/objects/Contract/fields/Average_Outdoor_Rent_Price_VND_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Average_Outdoor_Rent_Price_VND_m2_Month__c</fullName>
    <description>Help Text:
- (VNĐ/m2/Tháng)
- Đơn Giá Ngoài Trời TB = (Giá Thuê TB (Đơn Giá Ngoài Trời)*Tổng Tháng (Đơn Giá Ngoài Trời) + Giá Thuê TB (Tổng Giá Ngoài Trời)*Tổng Tháng (Tổng Giá Ngoài Trời))/(Tổng Tháng (Đơn Giá Ngoài Trời)+Tổng Tháng (Tổng Giá Ngoài Trời))</description>
    <label>Average Outdoor Rent Price(VND/m2/Month)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>