project/force-app/main/default/objects/Contract/fields/Average_Rent_Price_USD_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Average_Rent_Price_USD_m2_Month__c</fullName>
    <description>Help Text:
- (USD/m2/Tháng)
Read Only;
= Đơn Giá Thuê Trung Bình/Tỷ giá</description>
    <label>Average Rent Price (USD/m2/Month)</label>
    <type>Number</type>
    <formula>0</formula>
    <scale>2</scale>
    <precision>18</precision>
</CustomField>