project/force-app/main/default/objects/Contract/fields/Average_Rent_Price_VND_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Average_Rent_Price_VND_m2_Month__c</fullName>
    <description>Help Text:
- (VNĐ/m2/Tháng)
- Đơn Giá Thuê TB = (Giá Trung Bình (Đơn Giá Thuê)* Tổng Tháng (Đơn Giá Thuê) + Giá Trung Bình (Tổng GiáThuê)*Tổng Tháng (Tổng Giá Thuê))/(Tổng Tháng (Đơn Giá Thuê) + Tổng Tháng (Tổng Giá Thuê))</description>
    <label>Average Rent Price (VND/m2/Month)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>