project/force-app/main/default/objects/Contract/fields/Average_Service_Price_USD__c.field-meta.xml
<CustomField>
    <fullName>Average_Service_Price_USD__c</fullName>
    <description>Tổng Đơn Giá Của Tổng Giá = Tổng Giá / Diện Tích</description>
    <label>Total Unit Price (Total Price)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>