project/force-app/main/default/objects/Contract/fields/Average_Total_Rent_Price_USD_Month__c.field-meta.xml
<CustomField>
    <fullName>Average_Total_Rent_Price_USD_Month__c</fullName>
    <description>Help Text: (USD/Month)
Nguyên nhân sử dụng USD vì giá ngân sách trên RO đang là USD
Sử dụng cho báo cáo tỷ lệ thực hiện so với ngân sách trên BE Trung Tâm Thương Mại
= Đơn Giá Thuê Trung Bình (USD) * Diện tích
Với điều kiện
Nếu RO là Shopping Mall thì Diện Tích sẽ bằng Area (field trên Contract)
Nếu RO là Shophouse thì Diện Tích sẽ bằng Rent Area (field trên Contract)
Nếu RO là Advertising thì bằng 0</description>
    <label>Total Average Rent Price(USD/Month)</label>
    <type>Number</type>
    <formula>0</formula>
    <scale>2</scale>
    <precision>18</precision>
</CustomField>