project/force-app/main/default/objects/Contract/fields/Average_Total_Renting_Outdoor_USD_Month__c.field-meta.xml
<CustomField>
    <fullName>Average_Total_Renting_Outdoor_USD_Month__c</fullName>
    <description>Help Text: (USD/Month)
Nguyên nhân sử dụng USD vì giá ngân sách trên RO đang là USD
Sử dụng cho báo cáo tỷ lệ thực hiện so với ngân sách trên BE Khu Phố Thương Mại
Sử dụng Automation tính NLA để tính thông số này
= Đơn Giá Ngoài Trời Trung Bình (USD) * Diện tích ngoài trời
Với điều kiện: 
Nếu RO là Shopping Mall hay Advertising thì bằng 0
Nếu RO là Shophosue thì mới bằng Đơn Giá Ngoài Trời Trung Bình (USD) * Outdoor Area (field trên Contract)</description>
    <label>Total Average Renting Outdoor(USD/Month)</label>
    <type>Number</type>
    <formula>0</formula>
    <scale>2</scale>
    <precision>18</precision>
</CustomField>