project/force-app/main/default/objects/Contract/fields/BP_Code_of_Sales__c.field-meta.xml
<CustomField>
    <fullName>BP_Code_of_Sales__c</fullName>
    <description>Read Only
Tích hợp từ SAP</description>
    <label>BP Code of Sales</label>
    <type>Text</type>
    <length>255</length>
</CustomField>