project/force-app/main/default/objects/Contract/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Read Only
Tích hợp từ SAP</description>
    <label>Brand</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brands</relationshipLabel>
    <relationshipName>Brands</relationshipName>
</CustomField>