project/force-app/main/default/objects/Contract/fields/Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity__c</fullName>
    <description>Read Only
Tích hợp từ SAP</description>
    <label>Business Entity</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Entitys</relationshipLabel>
    <relationshipName>Business_Entitys</relationshipName>
</CustomField>