project/force-app/main/default/objects/Contract/fields/Business_Status__c.field-meta.xml
<CustomField>
    <fullName>Business_Status__c</fullName>
    <description>Read Only</description>
    <label>Business Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good;</fullName>
            </value>
            <value>
                <fullName>Average;</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>