project/force-app/main/default/objects/Contract/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Global Picklist với RO Category</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>