project/force-app/main/default/objects/Contract/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <description>Read Only
Tích hợp từ SAP</description>
    <label>Company Code</label>
    <type>Text</type>
    <length>255</length>
</CustomField>