project/force-app/main/default/objects/Contract/fields/Contracts_with_Outdoor_Area__c.field-meta.xml
<CustomField>
    <fullName>Contracts_with_Outdoor_Area__c</fullName>
    <description>IF( Diện tích Ngoài Trời &gt; 0, 1, 0)</description>
    <label>Contracts with Outdoor Area</label>
    <type>Number</type>
    <formula>0</formula>
    <scale>2</scale>
    <precision>18</precision>
</CustomField>