project/force-app/main/default/objects/Contract/fields/Deposit_Refund_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Refund_Date__c</fullName>
    <description>Chỉ hiển thị cho Hợp Đồng loại "Quảng Cáo"</description>
    <label>Deposit Refund Date</label>
    <type>Date</type>
</CustomField>