project/force-app/main/default/objects/Contract/fields/Deposit_Refund_Status__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Refund_Status__c</fullName>
    <description>Chỉ hiển thị cho Hợp Đồng loại "Quảng Cáo"</description>
    <label>Deposit Refund Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Refunded;</fullName>
            </value>
            <value>
                <fullName>Not Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>