project/force-app/main/default/objects/Contract/fields/Duration_LED_Screen_Rental_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Duration_LED_Screen_Rental_Contracts__c</fullName>
    <label>Duration (LED Screen Rental Contracts)</label>
    <required>true</required>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>