project/force-app/main/default/objects/Contract/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <description>Read Only
Tích hợp từ SAP
Help Text: Tỷ Giá Chuyển Đổi USD sang VND
Công thức chuyển đổi tiền từ VND sang USD sẽ là (* 1/ Exchange)</description>
    <label>Exchange Rate</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>