project/force-app/main/default/objects/Contract/fields/Invoice_Issuance_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Issuance_Date__c</fullName>
    <description>Chỉ hiển thị cho Hợp Đồng loại "Quảng Cáo"</description>
    <label>Invoice Issuance Date</label>
    <type>Date</type>
</CustomField>