project/force-app/main/default/objects/Contract/fields/Invoice_Issuance_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Issuance_Status__c</fullName>
    <description>Chỉ hiển thị cho Hợp Đồng loại "Quảng Cáo"</description>
    <label>Invoice Issuance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Issued;</fullName>
            </value>
            <value>
                <fullName>Not Issued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>