project/force-app/main/default/objects/Contract/fields/Legal_Records_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Records_Status__c</fullName>
    <description>Read Only</description>
    <label>Legal Records Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Within Deadline</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>