project/force-app/main/default/objects/Contract/fields/Opportunity_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_External_ID__c</fullName>
    <description>Field ẩn, không hiển thị lên layout</description>
    <label>Opportunity External ID</label>
    <type>Text</type>
    <length>255</length>
</CustomField>