project/force-app/main/default/objects/Contract/fields/Outdoor_Area__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Area__c</fullName>
    <description>- Thuê Ngoài Trời = Check =&gt;  Diện Tích Ngoài Trời = Diện Tích Ngoài Trời trên RO
- Thuê Ngoài Trời = UnCheck =&gt;   Diện Tích Ngoài Trời  = 0 

Note: Diện tích thuê của Shophouse</description>
    <label>Outdoor Area</label>
    <type>Text</type>
    <formula>""</formula>
</CustomField>