project/force-app/main/default/objects/Contract/fields/Outdoor_Price_Average_Price__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Price_Average_Price__c</fullName>
    <description>Giá Thuê TB (Tổng Giá Ngoài Trời) = Tổng Đơn Giá Ngoài Trời/(Tổng Tháng (Đơn Giá Ngoài Trời) * Diện Tích Ngoài Trời)</description>
    <label>Outdoor Price Average (Price)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>