project/force-app/main/default/objects/Contract/fields/Outdoor_Price_Average_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Price_Average_Unit_Price__c</fullName>
    <description>Giá Thuê TB (Đơn Giá Ngoài Trời) = Tổng Đơn Giá Ngoài Trời/Tổng Tháng (Đơn Giá Ngoài Trời)</description>
    <label>Outdoor Price Average (Unit Price)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>