project/force-app/main/default/objects/Contract/fields/Outdoor_Rent__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Rent__c</fullName>
    <label>Outdoor Rent</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>