project/force-app/main/default/objects/Contract/fields/Outdoor_Rent_Budget_USD_Month__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Rent_Budget_USD_Month__c</fullName>
    <description>Help Text:
- (USD/Month)
- Tiền Thuê Ngân Sách Tương Ứng với loại thuê trên Hợp Đồng
= Tiền Thuê NS Ngoài Trời (USD/ Tháng) tương ứng với điều kiện
Nếu RO là Shopping Mall hay Advertising thì bằng 0
Nếu RO là Shophouse thì mới bằng Tiền Thuê NS Ngoài Trời (USD/ Tháng)</description>
    <label>Total Budget Renting Outdoor (USD/Month)</label>
    <type>Number</type>
    <formula>0</formula>
    <scale>2</scale>
    <precision>18</precision>
</CustomField>