project/force-app/main/default/objects/Contract/fields/Outdoor_Rent_Price_VND_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Rent_Price_VND_m2_Month__c</fullName>
    <description>Read Only (Hiện tại)
Công thức = 
IF (Present Outdoor Price  != 0, Present Outdoor Price ,
IF(Total Present Outdoor Price != 0 &amp;&amp; Outdoor Area != 0, Total Present Outdoor Price/Outdoor Area, 0))</description>
    <label>Outdoor Rent Price (VND/m2/Month)</label>
    <type>Currency</type>
    <formula>0</formula>
    <scale>2</scale>
    <precision>18</precision>
</CustomField>