project/force-app/main/default/objects/Contract/fields/Present_Rent_Price__c.field-meta.xml
<CustomField>
    <fullName>Present_Rent_Price__c</fullName>
    <description>Help Text: VNĐ/m2/Tháng (có translate)
Không hiện thị layout
Roll-Up Summary (Contract Line)
Max (Price)
Filter Is Present Contract Line = TRUE AND
(Condition Type = V001 OR Condition Type = V020) AND
Formula = Differing Measurement, Sales-Based Rent</description>
    <label>Present Rent Price</label>
    <type>Text</type>
    <length>255</length>
</CustomField>