project/force-app/main/default/objects/Contract/fields/Present_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Present_Service_Fee__c</fullName>
    <description>Help Text: VNĐ/m2/Tháng (có translate)
Không hiện thị layout
Roll-Up Summary (Contract Line)
Max (Price)
Filter Is Present Contract Line = TRUE AND
Condition Type = V004 AND
Formula = Differing Measurement, Sales-Based Rent</description>
    <label>Present Service Fee</label>
    <type>Text</type>
    <length>255</length>
</CustomField>