project/force-app/main/default/objects/Contract/fields/Renewal_Ability_Review__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Ability_Review__c</fullName>
    <label>Renewal Ability Review</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Continue Renewal</fullName>
            </value>
            <value>
                <fullName>Capable of Liquidation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>