project/force-app/main/default/objects/Contract/fields/Rent_Area__c.field-meta.xml
<CustomField>
    <fullName>Rent_Area__c</fullName>
    <description>- Lựa Chọn Thuê = Thuê Nguyên Căn =&gt; Diện Tích Thuê = Tổng Diện Tích GFA (của RO)
- Lựa Chọn Thuê = Thuê Tầng 1 =&gt; Diện Tích Thuê = Diện Tích GFA Tầng 1 (của RO) 
- Lựa Chọn Thuê = Tầng 1 + 2 =&gt; Diện Tích Thuê = (Diện Tích GFA Tầng 1+ Diện Tích GFA Tầng 2) (của RO)

Note: Diện tích thuê của Shophouse</description>
    <label>Rent Area</label>
    <type>Text</type>
    <formula>""</formula>
</CustomField>