project/force-app/main/default/objects/Contract/fields/Rent_Price_Average_Price__c.field-meta.xml
<CustomField>
    <fullName>Rent_Price_Average_Price__c</fullName>
    <description>Giá Thuê Trung Bình (Tổng Giá) = Tổng Giá/(Tổng Tháng (Tổng Giá) * Diện Tích)</description>
    <label>Rent Price Average (Price)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>