project/force-app/main/default/objects/Contract/fields/Rent_Price_Average_Unit_Pric__c.field-meta.xml
<CustomField>
    <fullName>Rent_Price_Average_Unit_Pric__c</fullName>
    <description>Giá Thuê Trung Bình (Đơn Giá) = Tổng Đơn Giá/Tổng Tháng (Đơn Giá)</description>
    <label>Rent Price Average (Unit Price)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>