project/force-app/main/default/objects/Contract/fields/Rent_Price_USD_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Rent_Price_USD_m2_Month__c</fullName>
    <description>Read Only (Hiện tại)
- Đơn Giá Thuê (USD/m2/Tháng) = Đơn Giá Thuê (VNĐ/m2/Tháng)*/Tỷ giá</description>
    <label>Rent Price (USD/m2/Month)</label>
    <type>Number</type>
    <formula>0</formula>
    <scale>2</scale>
    <precision>18</precision>
</CustomField>