project/force-app/main/default/objects/Contract/fields/Rent_Price_VND_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Rent_Price_VND_m2_Month__c</fullName>
    <description>Read Only (Hiện tại)
Công thức = 
IF (Present Rent Price != 0, Present Rent Price,
IF(Total Present Rent Price != 0, Total Present Rent Price/ (Nếu là Rent Contract - Shop Mall) chia cho Area hoặc (Nếu là Rent Contract - Shophouse) thì chia cho Rent Area, 0))</description>
    <label>Rent Price (VND/m2/Month)</label>
    <type>Currency</type>
    <formula>0</formula>
    <scale>2</scale>
    <precision>18</precision>
</CustomField>