project/force-app/main/default/objects/Contract/fields/Rental_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Rental_Agreement_Status__c</fullName>
    <description>1. Tích hợp E-Office
2. Tích hợp SAP RE/ HCM
Note: Phòng thủ tục tham gia khảo sát; Chị Linh cung cấp lại dữ liệu picklist</description>
    <label>Rental Agreement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hard Copy Agreement Following;</fullName>
            </value>
            <value>
                <fullName>Signing Time Agreement Following;</fullName>
            </value>
            <value>
                <fullName>Contract Is Signed;</fullName>
            </value>
            <value>
                <fullName>Contract Is Liquidated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>