project/force-app/main/default/objects/Contract/fields/Rental_Options__c.field-meta.xml
<CustomField>
    <fullName>Rental_Options__c</fullName>
    <label>Rental Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rent Entire House</fullName>
            </value>
            <value>
                <fullName>Rent Floor 1</fullName>
            </value>
            <value>
                <fullName>Rent Floor 1 + 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>