project/force-app/main/default/objects/Contract/fields/Rental_Price_1__c.field-meta.xml
<CustomField>
    <fullName>Rental_Price_1__c</fullName>
    <label>Rental Price 1</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>