project/force-app/main/default/objects/Contract/fields/Rental_Price_2_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_Price_2_End_Date__c</fullName>
    <label>Rental Price 2 End Date</label>
    <type>Date</type>
</CustomField>