project/force-app/main/default/objects/Contract/fields/Rental_Price_3_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_Price_3_Start_Date__c</fullName>
    <label>Rental Price 3 Start Date</label>
    <type>Date</type>
</CustomField>