project/force-app/main/default/objects/Contract/fields/Revenue_Shared__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Shared__c</fullName>
    <description>Read Only
Lấy từ SAP</description>
    <label>% Revenue Shared</label>
    <type>Percent</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>