project/force-app/main/default/objects/Contract/fields/RO_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RO_End_Date__c</fullName>
    <description>Read Only
Tích hợp từ SAP</description>
    <label>RO End Date</label>
    <type>Date</type>
</CustomField>