project/force-app/main/default/objects/Contract/fields/RO_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>RO_Handover_Date__c</fullName>
    <label>RO Handover Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>