project/force-app/main/default/objects/Contract/fields/RO_Name__c.field-meta.xml
<CustomField>
    <fullName>RO_Name__c</fullName>
    <description>Read Only
Tích hợp từ SAP</description>
    <label>RO Name</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RO Names</relationshipLabel>
    <relationshipName>RO_Names</relationshipName>
</CustomField>