project/force-app/main/default/objects/Contract/fields/RO_Object_Number__c.field-meta.xml
<CustomField>
    <fullName>RO_Object_Number__c</fullName>
    <description>Read Only
Tích hợp từ SAP
Ẩn trên giao diện</description>
    <label>RO Object Number</label>
    <type>Text</type>
    <length>255</length>
</CustomField>