project/force-app/main/default/objects/Contract/fields/RO_Unit__c.field-meta.xml
<CustomField>
    <fullName>RO_Unit__c</fullName>
    <description>Read Only
Tích hợp từ SAP</description>
    <label>RO Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>m2;</fullName>
            </value>
            <value>
                <fullName>Months;</fullName>
            </value>
            <value>
                <fullName>Days;</fullName>
            </value>
            <value>
                <fullName>Hours;</fullName>
            </value>
            <value>
                <fullName>Items</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>