project/force-app/main/default/objects/Contract/fields/SAP_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Contract_Number__c</fullName>
    <description>Read Only
Tích hợp từ SAP</description>
    <label>SAP Contract Number</label>
    <type>Text</type>
    <length>255</length>
</CustomField>