project/force-app/main/default/objects/Contract/fields/Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee__c</fullName>
    <label>Service Fee</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>