project/force-app/main/default/objects/Contract/fields/Service_Fee_VND_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee_VND_m2_Month__c</fullName>
    <description>Read Only (Hiện tại)
Công thức = 
IF (Present Service Fee != 0, Present Service Fee,
IF(Total Present Service Fee != 0, Total Present Service Fee/ (Nếu là Rent Contract - Shophouse) thì chia cho Rent Area + Outdoor Area hoặc (Nếu là Rent Contract - Shop Mall) thì chia cho Area, 0))</description>
    <label>Service Fee (VND/m2/Month)</label>
    <type>Currency</type>
    <formula>0</formula>
    <scale>2</scale>
    <precision>18</precision>
</CustomField>