project/force-app/main/default/objects/Contract/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <description>Read Only
Tích hợp từ SAP
Field Mapping với Category và Sub Category</description>
    <label>SAP Sub Industry</label>
    <type>Text</type>
    <length>255</length>
</CustomField>