project/force-app/main/default/objects/Contract/fields/Sub_Industry_Description__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry_Description__c</fullName>
    <description>Read Only
Tích hợp từ SAP</description>
    <label>Sub Industry Description</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>