project/force-app/main/default/objects/Contract/fields/Total_Additional_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Additional_Fees__c</fullName>
    <description>Tổng Đơn Giá của các Line, có:
- Loại Điều Kiện = V011</description>
    <label>Total Additional Fees</label>
    <type>Text</type>
    <length>255</length>
</CustomField>