project/force-app/main/default/objects/Contract/fields/Total_Air_Conditioning_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Air_Conditioning_Fee__c</fullName>
    <description>Tổng Đơn Giá của các Line, có:
- Loại Điều Kiện = V028</description>
    <label>Total Air Conditioning Fee</label>
    <type>Text</type>
    <length>255</length>
</CustomField>