project/force-app/main/default/objects/Contract/fields/Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value__c</fullName>
    <description>Read Only
- TTTM: Tổng Giá Trị Hợp Đồng = Tổng Tiền Thuê + Tổng Phí Dịch vụ + Tổng Phí Điều Hòa + Tổng Phí Gia Tăng + Tổng Tiền Thuê Ngoài Trời</description>
    <label>Total Contract Value</label>
    <type>Text</type>
    <formula>""</formula>
</CustomField>