project/force-app/main/default/objects/Contract/fields/Total_Month_Outdoor_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Month_Outdoor_Price__c</fullName>
    <description>Tổng Tháng của các Line, có:
- Loại Điều Kiện = S100
- Kiểu Tính Giá = Fixed Amount</description>
    <label>Total Month (Outdoor Price)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>