project/force-app/main/default/objects/Contract/fields/Total_Month_Rent_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Month_Rent_Price__c</fullName>
    <description>Tổng Tháng Tiền Thuê = Tổng Tháng trên Contract Line, Có Condition Type = V001  hoặc V020</description>
    <label>Total Month Rent Price</label>
    <type>Text</type>
    <length>255</length>
</CustomField>