project/force-app/main/default/objects/Contract/fields/Total_Month_Service_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Month_Service_Price__c</fullName>
    <description>Tổng Tháng Tiền PDV = Tổng Tháng trên Contract Line, Có Conditon Type = V004</description>
    <label>Total Month Service Price</label>
    <type>Text</type>
    <length>255</length>
</CustomField>