project/force-app/main/default/objects/Contract/fields/Total_Month_Unit_Service_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Month_Unit_Service_Price__c</fullName>
    <description>Tổng Tháng của các Line, có:
- Loại Điều Kiện = V004
- Kiểu Tính Giá khác Fixed Amount</description>
    <label>Total Month (Unit Service Price)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>