project/force-app/main/default/objects/Contract/fields/Total_Outdoor_Price_Line__c.field-meta.xml
<CustomField>
    <fullName>Total_Outdoor_Price_Line__c</fullName>
    <description>Tổng Giá Trên Line của các Line, có:
- Loại Điều Kiện = S100
- Kiểu Tính Giá = Fixed Amount</description>
    <label>Total Outdoor Price (Line)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>