project/force-app/main/default/objects/Contract/fields/Total_Present_Outdoor_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Present_Outdoor_Price__c</fullName>
    <description>Help Text: VNĐ/Tháng (có translate)
Không hiện thị layout
Roll-Up Summary (Contract Line)
Max (Total Price in Line)
Filter Is Present Contract Line = TRUE AND
Condition Type = S100 AND
Formula = Fixed Amount</description>
    <label>Total Present Outdoor Price</label>
    <type>Text</type>
    <length>255</length>
</CustomField>