project/force-app/main/default/objects/Contract/fields/Total_Present_Rent_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Present_Rent_Price__c</fullName>
    <description>Help Text: VNĐ/Tháng (có translate)
Không hiện thị layout
Roll-Up Summary (Contract Line)
Max (Price)
Filter Is Present Contract Line = TRUE AND
(Condition Type = V001 OR Condition Type = V020) AND
Formula = Fixed Amount</description>
    <label>Total Present Rent Price</label>
    <type>Text</type>
    <length>255</length>
</CustomField>