project/force-app/main/default/objects/Contract/fields/Total_Present_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Present_Service_Fee__c</fullName>
    <description>Help Text: VNĐ/m2/Tháng (có translate)
Không hiện thị layout
Roll-Up Summary (Contract Line)
Max (Total Price in Line)
Filter Is Present Contract Line = TRUE AND
Condition Type = V004 AND
Formula = Fixed Amount</description>
    <label>Total Present Service Fee</label>
    <type>Text</type>
    <length>255</length>
</CustomField>