project/force-app/main/default/objects/Contract/fields/Total_Rent_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Rent_Price__c</fullName>
    <description>Tổng Tiền Thuê Ngoài Trời = Tổng Giá Ngoài Trời + Tổng Đơn Giá Ngoài Trời*Diện Tích Ngoài Trời</description>
    <label>Total Outdoor Price</label>
    <type>Text</type>
    <formula>""</formula>
</CustomField>